k8s/prometheus/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
spec:
  rules:
  - host: dawg-dev.localhost
    http:
      paths:
        - path: /prometheus
          pathType: Prefix
          backend:
            service:
              name: prometheus
              port:
                name: http
